App now logs error and continues to next site if exception encountered

--- a/ASPNET_SiteWarmup/ASPNET_SiteWarmup.csproj
+++ b/ASPNET_SiteWarmup/ASPNET_SiteWarmup.csproj
@@ -62,6 +62,7 @@
   <ItemGroup>
     <Content Include="sites.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <SubType>Designer</SubType>
     </Content>
   </ItemGroup>
   <ItemGroup>
